# crawlrouter

./: .dockerignore  .gitignore  BENCHMARK.md  Dockerfile  README.md  app.py  docker-compose-crawl4ai-searxng.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
app/: BENCHMARK.md  app.py  batch_scrape_backends.yml  scrape_backends.yml  search_backends.yml
app/templates/: deep-research-ui.html  extract-ui.html  home.html  scrape-ui.html
