[project]
name = "crawlrouter"
version = "0.3.0"
description = "Unified API for Searching and Crawling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "markdownify>=1.0.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
]
